2011-12-20  Yoshizumi Endo  <yendo@ubuntu>

	* settings.py: Ported from GConf to GSettings.

2011-12-16  Yoshizumi Endo  <yendo@ubuntu>

	* gphotoframe.schemas.in: Changed default_weight from 3 to 5.
	* liststore.py: Save the liststore as JSON.

2011-12-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Code refactoring.

2011-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/animation.py: Fixed import errors.

2011-12-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/history/history.html: Added the icon to the history.html.
	* image/gtkimage.py, plugins/base/base.py: Fixed size attribute
	  problems.
	* tumblr/__init__.py: Added size attributes.

2011-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added new gconf key 'ui/map/source_uri'.

2011-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added support for Map on image with
	  libchamplain.

2011-11-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4.1 release.

2011-11-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/config.py: Use old gconf package. New one has bugs.
	* gtkimage.py (PhotoImagePixbuf._no_image): Dropped GtkDrawable.

2011-11-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotofame: Renamed symbols from PyGTK 2 to PyGI GTK 3 with
	  pygi-convert.sh.
	* utils/gtk3reactor: Added new module for GTK 3.

2011-11-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* config.py: Added support for gconf.VALUE_LIST.
	* plugins/facebook/, gphotoframe.ui: Started implementation for
	  Facebook album selection (issue #98).

2011-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr.po: Added French translation.  Thanks MathieuMD!

2011-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py: Added new gconf key 'gravity' for a workaround for
	  a Xfwm bug (issue #97).  Xfwm does not support GDK_GRAVITY
	  correctly.  The frame window gravity needs be set to
	  GDK_GRAVITY_NORTH_WEST forcelly.
