@@ -47,7 +47,9 @@ It shows pictures from:
 You can install with the setup script.
 
   sudo python ./setup.py install --force
-  sudo gconf-schemas --register gphotoframe.schemas
+
+  sudo cp ./share/org.gnome.gphotoframe.gschema.xml /usr/share/glib-2.0/schemas
+  sudo sudo glib-compile-schemas /usr/share/glib-2.0/schemas
 
 Or, you can launch without installation. (Some functions are restricted.)
 
